--- a/chyrp-frontend/package.json
+++ b/chyrp-frontend/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.11.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.8.2"
   },
   "devDependencies": {
